<resources>
    <string name="app_name">My Application</string>
    <string name="hello_world">Hello World</string>
    <string name="biodata">Biodata</string>
    <string name="nama">Nama</string>
    <string name="asal">Asal</string>
    <string name="motto">Motto</string>
    <string name="nama_roni">Roni Syafrialdi</string>
    <string name="padang">Padang</string>
    <string name="just_do_it">Just Do It</string>
    <string name="hint_input_1">Masukkan angka 1</string>
    <string name="hint_input_2">Masukkan angka 2</string>
    <string name="tambah">tambah</string>
    <string name="hasil">Hasil</string>
    <string name="kurang">kurang</string>
    <string name="kali">Kali</string>
    <string name="bagi">Bagi</string>
    <string name="lanjut">Lanjut</string>
    <string name="gambar_desktop">gambar desktop</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="email">Email</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="no_hp">No HP</string>
    <string name="masukkan_no_hp">Masukkan No HP</string>
    <string name="submit">Submit</string>
    <string name="alamat">Alamat</string>
    <string name="masukkan_alamat">masukkan alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="jenis_tempat_tinggal">Jenis Tempat Tinggal</string>
    <string name="apakah_perokok">Apakah Perokok</string>
    <string name="tidak">Tidak</string>
    <string name="kembali">kembali</string>
    <string-array name="tempat_tinggal_">
        <item>Bersama Orang Tua</item>
        <item>Apartemen</item>
        <item>Kos</item>
        <item>Asrama</item>
    </string-array>

</resources>