<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <EditText
        android:id="@+id/et_input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_input_1"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_input2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_input_2"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/et_input1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_input1"
        app:layout_constraintTop_toBottomOf="@+id/et_input1" />

    <Button
        android:id="@+id/btn_tambah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tambah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_input2" />

    <Button
        android:id="@+id/btn_kurang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/kurang"
        app:layout_constraintEnd_toEndOf="@+id/btn_tambah"
        app:layout_constraintStart_toStartOf="@+id/btn_tambah"
        app:layout_constraintTop_toBottomOf="@+id/btn_tambah" />

    <Button
        android:id="@+id/btn_kali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/kali"
        app:layout_constraintEnd_toEndOf="@+id/btn_kurang"
        app:layout_constraintStart_toStartOf="@+id/btn_tambah"
        app:layout_constraintTop_toBottomOf="@+id/btn_kurang" />

    <Button
        android:id="@+id/btn_bagi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bagi"
        app:layout_constraintEnd_toEndOf="@+id/btn_kali"
        app:layout_constraintStart_toStartOf="@+id/btn_kali"
        app:layout_constraintTop_toBottomOf="@+id/btn_kali" />

    <TextView
        android:id="@+id/tv_hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_tambah"
        tools:text="@string/hasil" />


</androidx.constraintlayout.widget.ConstraintLayout>